# ChangeLog for net-irc/unrealircd
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.33 2005/05/03 22:17:13 swegener Exp $

*unrealircd-3.2.3-r1 (03 May 2005)

  03 May 2005; Sven Wegener <swegener@gentoo.org>
  +unrealircd-3.2.3-r1.ebuild:
  Revision bump. Added support for the curl USE flag that allows
  network-based configuration includes. Closes bug #86307.

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org>
  unrealircd-3.2.3.ebuild:
  Stable on ppc.

  26 Apr 2005; Sven Wegener <swegener@gentoo.org> unrealircd-3.2.3.ebuild:
  Set ownership of configuration files the right way. Fixes bug #90075.

  22 Apr 2005; Sven Wegener <swegener@gentoo.org> unrealircd-3.2.3.ebuild:
  Marked stable on x86.

*unrealircd-3.2.3 (14 Mar 2005)

  14 Mar 2005; Sven Wegener <swegener@gentoo.org> +unrealircd-3.2.3.ebuild:
  Version bump.

  18 Jan 2005; Sven Wegener <swegener@gentoo.org>
  -unrealircd-3.2.1-r1.ebuild, -unrealircd-3.2.2.ebuild:
  Removed old vulnerable ebuilds.

*unrealircd-3.2.2b (18 Jan 2005)

  18 Jan 2005; Sven Wegener <swegener@gentoo.org> +unrealircd-3.2.2b.ebuild:
  Version bump for security bug #78524. Marked stable on x86.

*unrealircd-3.2.2 (05 Dec 2004)

  05 Dec 2004; Sven Wegener <swegener@gentoo.org>
  unrealircd-3.2.1-r1.ebuild, +unrealircd-3.2.2.ebuild:
  Version bump.

  17 Oct 2004; Sven Wegener <swegener@gentoo.org>
  -files/3.1.5.1-Config.patch, -files/3.1.6-Config.patch,
  -unrealircd-3.1.5.1.ebuild, -unrealircd-3.1.6.ebuild:
  Removed old ebuilds and files.

  09 Oct 2004; Sven Wegener <swegener@gentoo.org> files/unrealircd.rc:
  Modified to 'use net' not 'need net' in init script. Closes bug #66467.

  03 Oct 2004; Sven Wegener <swegener@gentoo.org>
  unrealircd-3.2.1-r1.ebuild:
  Marked stable on x86.

  15 Aug 2004; Sven Wegener <swegener@gentoo.org> files/unrealircd.rc,
  unrealircd-3.2.1-r1.ebuild, -unrealircd-3.2.1.ebuild: