@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/unrealircd-3.2.3-r1.ebuild,v 1.2 2005/05/09 09:14:02 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/unrealircd-3.2.3-r1.ebuild,v 1.3 2005/06/29 16:08:58 swegener Exp $
 
 inherit eutils ssl-cert versionator
 
@@ -25,10 +25,11 @@ DEPEND="${RDEPEND}
 S="${WORKDIR}/Unreal$(get_version_component_range 1-2)"
 
 pkg_setup() {
-	if use curl && ! built_with_use net-misc/curl ares
+	if use curl && ( ! built_with_use net-misc/curl ares || built_with_use net-misc/curl ipv6 )
 	then
 		eerror "You need net-misc/curl compiled with the ares USE flag to be able to use"
-		eerror "net-irc/unrealircd with the curl USE flag."
+		eerror "net-irc/unrealircd with the curl USE flag. Please note that ares support"
+		eerror "for net-misc/curl is incompatible with the ipv6 USE flag."
 		die "need net-misc/curl with ares support"
 	fi
 
